--- a/_config.yml
+++ b/_config.yml
@@ -5,18 +5,22 @@ permalink: /:categories/:year/:month/:day/:title
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
 highlighter: rouge
 
+markdown: kramdown
+kramdown:
+  extensions: ["fenced_code_blocks", "autolink", "tables", "with_toc_data"]
+
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : Jekyll Bootstrap
-tagline: Site Tagline
+title : Jack Jack Attack!
+tagline: Web Incredibles
 author :
-  name : Name Lastname
-  email : blah@email.test
-  github : username
-  twitter : username
+  name : Jack
+  email : xjlin0@gmail.com
+  github : xjlin0
+  twitter : xjlin0
   feedburner : feedname
-
+  linkedin : Jack0
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
 # Most places will/should use BASE_PATH to make the urls
@@ -25,7 +29,7 @@ author :
 # Else if you are pushing to username.github.io, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://username.github.io
+production_url : http://xjlin0.github.io
 
 plugins: ["jekyll-sitemap"]
 
@@ -84,7 +88,7 @@ JB :
   comments :
     provider : disqus
     disqus :
-      short_name : jekyllbootstrap
+      short_name : xjlin0github
     livefyre :
       site_id : 123
     intensedebate :
@@ -95,7 +99,7 @@ JB :
       width: 580
       colorscheme: light
     duoshuo :
-      short_name : jekyllbootstrap
+      short_name : xjlin0github
    
   # Settings for analytics helper
   # Set 'provider' to the analytics provider you want to use.
@@ -106,7 +110,7 @@ JB :
     gauges :
         site_id : 'SITE ID'
     google : 
-        tracking_id : 'UA-123-12'
+        tracking_id : 'UA-61936719-1'
     getclicky :
       site_id : 
     mixpanel :
@@ -121,7 +125,7 @@ JB :
   # Set 'provider' to false to turn sharing off globally.
   #
   sharing :
-    provider : false
+    provider : tweet plusone like reddit
     
   # Settings for all other include helpers can be defined by creating 
   # a hash with key named for the given helper. ex:
