extract hard coded values to config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ JB :
   tags_path : /tags/
   atom_path : /atom.xml
   rss_path : /rss.xml
-
+  pages_path: /pages/
   # Settings for comments helper
   # Set 'provider' to the comment provider you want to use.
   # Set 'provider' to false to turn commenting off globally.
